test/test_images/metrics-test/service_istio_injected.yaml
# Copyright 2024 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: metrics-test-istio
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: metrics-test-istio
spec:
  template:
    metadata:
      labels:
        app: metrics-test-istio
      annotations:
        sidecar.istio.io/inject: "true"
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "10"
        autoscaling.knative.dev/target: "5"
        autoscaling.knative.dev/class: "hpa.autoscaling.knative.dev"
        autoscaling.knative.dev/metric: "http_requests_total"
        autoscaling.knative.dev/prometheus-query: "sum(rate(http_requests_total{}[1m]))"
    spec:
      containers:
        - image: ko://knative.dev/autoscaler-keda/test/test_images/metrics-test/
          imagePullPolicy: IfNotPresent
          ports:
            - name: http1
              containerPort: 8080
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  labels:
  name: metrics-test-istio-sm
spec:
  endpoints:
    - port: metrics
      scheme: http
  namespaceSelector: {}
  selector:
    matchLabels:
      name:  metrics-test-istio-sm
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name:  metrics-test-istio-sm
  name:  metrics-test-istio-sm
spec:
  ports:
    - name: metrics
      port: 9096
      protocol: TCP
      targetPort: 9096
  selector:
    serving.knative.dev/service: metrics-test-istio
  type: ClusterIP
