test/test_images/metrics-test/service_multiple_triggers_scaling_modifiers.yaml
# Copyright 2024 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: metrics-test
spec:
  template:
    metadata:
      labels:
        app: metrics-test
      annotations:
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "10"
        autoscaling.knative.dev/target: "1"
        autoscaling.knative.dev/class: "hpa.autoscaling.knative.dev"
        autoscaling.knative.dev/metric: "my_metric"
        autoscaling.knative.dev/trigger-prometheus-name: "trigger1"
        autoscaling.knative.dev/prometheus-query: sum(rate(http_requests_total{namespace="test"}[1m]))
        autoscaling.knative.dev/scaling-modifiers: '{"formula": "(trigger1 + trigger2)/2", "target": "1", "activationTarget": "1", "metricType": "AverageValue"}'
        autoscaling.knative.dev/extra-prometheus-triggers: '[{"type": "prometheus", "name": "trigger2",  "metadata": { "serverAddress": "http://prometheus-operated.default.svc:9090" , "namespace": "test-namespace",  "query": "sum(rate(http_requests_total{namespace=\"test\"}[1m]))", "threshold": "1"}}]'
    spec:
      containers:
        - image: ko://knative.dev/autoscaler-keda/test/test_images/metrics-test/
          imagePullPolicy: Always
          ports:
            - name: http1
              containerPort: 8080
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  labels:
  name: metrics-test-sm
spec:
  endpoints:
    - port: metrics
      scheme: http
  namespaceSelector: {}
  selector:
    matchLabels:
      name:  metrics-test-sm
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name:  metrics-test-sm
  name:  metrics-test-sm
spec:
  ports:
    - name: metrics
      port: 9096
      protocol: TCP
      targetPort: 9096
  selector:
    serving.knative.dev/service: metrics-test
  type: ClusterIP
